# protocol/schemas/openapi.json
@@ -402,6 +402,22 @@
               ],
               "title": "Density"
             }
+          },
+          {
+            "name": "locator",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Locator"
+            }
           }
         ],
         "responses": {
